# markdown-converter

./: .eslintrc.js  .gitignore  LICENSE  README.md  index.html  jest.config.js  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  setupTests.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  converter.rs  error.rs  main.rs
src-tauri/src/converter/: tests.rs
src/components/: ConversionControls.tsx  ErrorPanel.tsx  FileUpload.tsx  Header.tsx  ProgressIndicator.tsx
src/utils/: errorHandling.ts  fileUtils.ts  logger.ts  validation.ts
src/utils/__tests__/: errorHandling.test.ts  validation.test.ts
